pocLoadBalancer app update

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,4 @@
 spring.application.name=pocloadbalancer
+management.endpoints.web.exposure.include=health
+management.endpoint.health.probes.enabled=true
+
