--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,4 +1,5 @@
 spring.application.name=pocloadbalancer
+spring.port = 8080
 management.endpoints.web.exposure.include=health
 management.endpoint.health.probes.enabled=true
 
