--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,5 +1,6 @@
 spring.application.name=pocloadbalancer
-spring.port = 8080
+server.address=0.0.0.0
+server.port=8080
 management.endpoints.web.exposure.include=health
 management.endpoint.health.probes.enabled=true
 
